welcome.lessons.welcome.array.search.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = {
  var L = len(nums)
  for (i <- 0 to L-1){
    if (nums(i)==lookingFor){
      return i
    } else {return -1}
  }}